# api_v1/static/swagger.yaml
@@ -3,20 +3,16 @@ info:
   title: Swagger Petstore - OpenAPI 3.0
   description: |-
    This is a sample API RESTful developed with flask
-  termsOfService: http://swagger.io/terms/
-  license:
-    name: Apache 2.0
-    url: http://www.apache.org/licenses/LICENSE-2.0.html
   version: 1.0.11
 servers:
   - url: http://127.0.0.1:5000/api/v1/resources
 tags:
   - name: item
-    description: Everything about your item
+    description: Everything about your items
   - name: file
     description: Everything about your files
   - name : item and file
-    description: Everything about item/file
+    description: Everything about items/files
 
       
 paths:
@@ -247,16 +243,16 @@ components:
   schemas:
     Item:
       properties:
-        id_article:
+        id:
           type: integer
           example: 1
         reference:
           type: string
           example: ref 1
-        code_article:
+        item_code:
           type: string
           example: code 1
-        article_nom:
+        item_name:
           type: string
           nullable: true
           example: item 1
@@ -265,19 +261,19 @@ components:
         reference:
           type: string
           example: ref 1
-        code_article:
+        item_code:
           type: string
           example: code 1
-        article_nom:
+        item_name:
           type: string
           nullable: true
           example: item 1
     File:
       properties:
-        id_dossier:
+        id:
           type: integer
           example: 1
-        num_dossier:
+        num_file:
           type: string
           example: dossier_1
         date:
@@ -285,12 +281,12 @@ components:
           format: date
           example: 01/10/2003
           nullable: true
-        id_article:
+        id_item:
           type: integer
           example: 1
     File_update:
       properties:
-        num_dossier:
+        num_file:
           type: string
           example: dossier_1
         date:
@@ -300,7 +296,7 @@ components:
           nullable: true
     File_update_auth:
       properties:
-        num_dossier:
+        num_file:
           type: string
           example: dossier_1
         date:
@@ -308,15 +304,15 @@ components:
           format: date
           example: 01/10/2003
           nullable: true
-        id_article:
+        id_item:
           type: integer
           example: 1
     File_create:
       properties:
-        id_dossier:
+        id:
           type: integer
           example: 1
-        num_dossier:
+        num_file:
           type: string
           example: dossier_1
         date:
